# sigmadft

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/sigmadft/: __init__.py  main.py
src/sigmadft/analyzers/: KeyProcessor.py  ReadFromYamlAnalyzer.py
src/sigmadft/events/: BaseEvent.py  HighLevelEvent.py  LowLevelEvent.py
src/sigmadft/output/: JSONWriter.py
src/sigmadft/reader/: CSVReader.py  YAMLReader.py
src/sigmadft/rules/: Rule.py
src/sigmadft/rules/linux/builtin/syslog/: lnx_syslog_security_tools_disabling_syslog.yml
src/sigmadft/rules/linux/custom_susp/: lnx_auth_failure.yml  lnx_session_opened.yml  lnx_user_add.yml  lnx_user_mod.yml  lnx_web_shell_detection.yml
src/sigmadft/rules/web/: bing_search.yml  google_search.yml  web_visit.yml  youtube_watch.yml
src/sigmadft/timelines/: HighLevelTimeline.py  LowLevelTimeline.py
src/sigmadft/utils/: util.py
